# FaceRecognition

./: CMakeLists.txt  README.md  embsys-mqtt-server.service  face_recognition.db  streaming_face_recognition.py
FaceRecognition/: embsys-http-server.service
FaceRecognition/src/: mqtt_server.cpp
src/: http_server.cpp
video-streaming-app/: CMakeLists.txt  app.py  playlist.m3u8
video-streaming-app/src/: video_stream.c
video-streaming-app/templates/: index.html
